//
// Created by Simonas Sankauskas on 2019-04-26.
//

#ifndef LIGHT_SQUARE_FCADDRESS_H
#define LIGHT_SQUARE_FCADDRESS_H


class FcAddress {
public:
    string address;
    int port;
};


#endif //LIGHT_SQUARE_FCADDRESS_H
