//
// Created by Simonas Sankauskas on 2019-04-26.
//

#ifndef LIGHT_SQUARE_FCCOLOR_H
#define LIGHT_SQUARE_FCCOLOR_H


class FcColor {
    float gamma;
    vector<float> whitepoint;
    float linearSlope;
    float linearCutoff;
};

#endif //LIGHT_SQUARE_FCCOLOR_H
