//
// Created by Simonas Sankauskas on 2019-04-26.
//

#ifndef LIGHT_SQUARE_FCDEVICE_H
#define LIGHT_SQUARE_FCDEVICE_H

#import "ofMain.h"

class FcDevice {
public:
    string type;
    string serial;
    string version;
};


#endif //LIGHT_SQUARE_FCDEVICE_H
